# ed_sensor_integration

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  hero_sam  package.xml
.github/workflows/: main.yml
ed_sensor_integration/: CMakeLists.txt  README.md  package.xml  plugins.xml  rosdoc.yaml
ed_sensor_integration/.github/: copilot-instructions.md
ed_sensor_integration/.github/agents/: ed-sensor-validator.agent.md
ed_sensor_integration/.github/skills/compiling-and-running-ros-code/: SKILL.md
ed_sensor_integration/include/ed/kinect/: association.h  bayesian_gmm.h  beam_model.h  entity_update.h  fitter.h  image_buffer.h  mesh_tools.h  place_area_finder.h  segmenter.h  updater.h  variational_gmm.h
ed_sensor_integration/include/ed/laser/: entity_update.h  updater.h
ed_sensor_integration/include/ed_sensor_integration/: association_matrix.h  hungarian.h  meshing.h  sac_model_circle.h  sac_model_circle.hpp  sac_model_double_line.h  sac_model_double_line.hpp  sac_model_horizontal_plane.h  sac_model_horizontal_plane.hpp  sac_model_rectangle.h  sac_model_rectangle.hpp  voxel_point_merger.h
ed_sensor_integration/include/ed_sensor_integration/kinect/almodules/: polygon_height_alm.h  world_model_renderer.h
ed_sensor_integration/include/ed_sensor_integration/kinect/segmodules/: euclidean_clustering_sm.h  floodfill_sm.h  rgbd_seg_module.h  sam_seg_module.h
ed_sensor_integration/include/ed_sensor_integration/properties/: pose_info.h
ed_sensor_integration/include/ed_sensor_integration/tools/: fitter_viz.h  snapshot.h
ed_sensor_integration/scripts/: listener.py  mask_mapper.cpp  table_segmentation.py  table_segmentor.py  yolo_table_segmentor.py
ed_sensor_integration/src/: association_matrix.cpp  hungarian.cpp  voxel_point_merger.cpp
ed_sensor_integration/src/clearer/: clearer_plugin.cpp  clearer_plugin.h
ed_sensor_integration/src/kinect/: .ray_tracer.cpp.swp  association.cpp  bayesian_gmm.cpp  beam_model.cpp  code_v1.cpp  empty_spot_designator.cpp  fitter.cpp  fitter.cpp.autosave  image_buffer.cpp  kinect_plugin.cpp  kinect_plugin.h  mesh_tools.cpp  place_area_finder.cpp  ray_tracer.cpp  ray_tracer.h  renderer.cpp  sam_seg_module.cpp  segmenter.cpp  updater.cpp  variational_gmm.cpp
ed_sensor_integration/src/laser/: laser_plugin.cpp  laser_plugin.h  updater.cpp
ed_sensor_integration/test/: amigo_fitter_rgo2015.yaml  amigo_fitter_testlab.yaml  amigo_kinect2.yaml  amigo_kinect_cabinet.yaml  amigo_laser.yaml  table.sdf  test_convex_hull.cpp  test_fitter_victor.cpp  test_furniture_fit.cpp  test_laser_model.sdf  test_laser_segmenter.cpp  test_model.sdf
ed_sensor_integration/test/block/: model.config  model.sdf
ed_sensor_integration/test/floor/: model.config  model.sdf
ed_sensor_integration/test/table/: model.config  model.sdf
ed_sensor_integration/tools/: README.md  empty_spot_designator.cpp  fitter_gui.cpp  fitter_viz.cpp  fitter_viz_data.cpp  fitter_viz_live.cpp  image_saver.cpp  segment_and_show.cpp  segmenter.cpp  table_modeler.cpp  torch_test.cpp  yolo_viewer.cpp
ed_sensor_integration/yolo_python/: yolo_table_segmentor.py
ed_sensor_integration/yolo_python/previous_iterations/: YOLOv8_single_image.py  YOLOv8_video_optimized.py  mask_mapper.cpp
ed_sensor_integration_msgs/: CMakeLists.txt  package.xml
ed_sensor_integration_msgs/msg/: GUIAction.msg  ImageBinary.msg
ed_sensor_integration_msgs/srv/: FitModel.srv  GetModels.srv  GetPOIs.srv  GetSnapshots.srv  LockEntities.srv  NavigateTo.srv  PlaceArea.srv  Segment.srv  Update.srv
ed_sensor_integration_py/: CMakeLists.txt  README.md  package.xml  setup.py
include/ed/kinect/: association.h  fitter.h  image_buffer.h  mesh_tools.h  renderer.h  segmenter.h  updater.h
include/ed_sensor_integration/: hungarian_method_association_matrix.h
include/ed_sensor_integration/properties/: convex_hull.h  convex_hull_calc.h  convex_hull_info.h  pose_info.h
msg/: GUIAction.msg
src/: association_matrix.cpp  color_table.cpp  color_table.h  meshing.cpp  sensor_integration_plugin.cpp  sensor_integration_plugin.h
src/clearer/: clearer_plugin.cpp
src/fitter/: beam_model.cpp  beam_model.h  fitter_plugin.cpp  fitter_plugin.h  gui.cpp  gui.h  map_filter.cpp  map_filter.h  snapshot.h
src/kinect/: association.cpp  association.h  cluster.h  fitter.cpp  fitter.h  image_buffer.cpp  kinect_plugin.cpp  kinect_plugin.h  mesh_tools.cpp  plugin.cpp  plugin.h  plugin2.cpp  plugin2.h  ray_tracer.cpp  renderer.cpp  sampling_projector_localizer.cpp  sampling_projector_localizer.h  sampling_render_localizer.cpp  sampling_render_localizer.h  segmenter.cpp  segmenter.h  updater.cpp
src/kinect/almodules/: point_normal_alm.cpp  polygon_height_alm.cpp  relative_alm.cpp  world_model_renderer.cpp
src/kinect/localization/: sampling_projector_localizer.cpp  sampling_render_localizer.cpp
src/kinect/segmodules/: euclidean_clustering_sm.cpp
src/kinect2/: association_matrix.cpp  association_matrix.h  plugin.cpp  plugin.h  segmentation.cpp  visualization.cpp  visualization.h
src/kinect2/distributed/: localization.h  test_serialization.cpp
src/kinect_color/: sensor_integration_plugin.cpp
src/kinect_diff/: plugin.cpp  plugin.h
src/laser/: laser_plugin.h  plugin.cpp  plugin.h  plugin_tracking.cpp  plugin_tracking.h
src/old/fitter/: beam_model.cpp  beam_model.h  fitter_plugin.h  map_filter.cpp  mesh_tools.cpp  snapshot.h  test_fitter.cpp
src/old/kinect/: plugin.cpp  plugin.h  sampling_projector_localizer.cpp  sampling_projector_localizer.h  visualization.cpp  visualization.h
src/old/kinect2/: plugin.cpp  plugin.h  (+2 more)
src/properties/: convex_hull_calc.cpp  convex_hull_info.cpp  pose_info.cpp
srv/: FitModel.srv  GetImage.srv  GetModels.srv  GetPOIs.srv  GetSnapshots.srv  MeshEntityInView.srv  RayTrace.srv  Segment.srv  Update.srv
test/: amigo.yaml  amigo2.yaml  amigo_fitter.yaml  amigo_fitter_testlab.yaml  amigo_kinect2.yaml  amigo_kinect_cabinet.yaml  amigo_kinect_cabinet2.yaml  test_convex_hull.cpp  test_kinect.yaml
tools/: fitter_gui.cpp  image_saver.cpp  old_segmenter.cpp  segment_and_show.cpp  segmenter.cpp
(+23 files in other folders)
