<?xml version="1.0"?>
<package>
  <name>ed_sensor_integration</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <run_depend>ed</run_depend>

  <build_depend>kdl_parser</build_depend>
  <run_depend>kdl_parser</run_depend>

  <build_depend>blackboard</build_depend>
  <run_depend>blackboard</run_depend>

  <build_depend>cb_planner_msgs_srvs</build_depend>
  <run_depend>cb_planner_msgs_srvs</run_depend> <!-- TODO: get rid of this dep -->

</package>
