<?xml version="1.0"?>
<package>
  <name>ed_sensor_integration</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cb_planner_msgs_srvs</build_depend>
  <build_depend>ed</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ropod_demo_dec_2017</build_depend>

  <run_depend>cb_planner_msgs_srvs</run_depend> <!-- TODO: get rid of this dep -->
  <run_depend>ed</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ropod_demo_dec_2017</run_depend>

</package>
