<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_sensor_integration</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>ed_sensor_integration_msgs</build_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tue_config</build_depend>
  <build_depend>tue_filesystem</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>ed</exec_depend>
  <exec_depend>ed_sensor_integration_msgs</exec_depend>
  <exec_depend>geolib2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tue_config</exec_depend>
  <exec_depend>tue_filesystem</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
